objects/copadoAiHelper__Copado_AI_Companion_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>copadoAiHelper__Allowed_Objects__c</fullName>
        <description>List of Object names (one per line) that are allowed to query, beside the Copado Objects.
E.g.
Case
Lead
Contact</description>
        <inlineHelpText>List of Object names (one per line) that are allowed to query, beside the Copado Objects.</inlineHelpText>
        <label>Allowed Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoAiHelper__Allows_Functions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the OpenAI Model allows Function calls</description>
        <inlineHelpText>Set to true if the OpenAI Model allows Function calls</inlineHelpText>
        <label>Allows Functions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoAiHelper__CopadoGPT_backend_URL__c</fullName>
        <description>By default, if this is empty, AI Companion will use the url of the named credential &quot;mc-backend&quot; (API Name mc_backend). You can set this field if a different URL is needed for your installation</description>
        <inlineHelpText>By default, if this is empty, AI Companion will use the url of the named credential &quot;mc-backend&quot; (API Name mc_backend). You can set this field if a different URL is needed for your installation</inlineHelpText>
        <label>CopadoGPT backend URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copadoAiHelper__Max_Tokens__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Max Tokens</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadoAiHelper__OpenAI_Model__c</fullName>
        <defaultValue>&quot;gpt-3.5-turbo&quot;</defaultValue>
        <description>ID of the AI model to use. Consult the Copado documentation to see all of the available models</description>
        <inlineHelpText>ID of the AI model to use. Consult the Copado documentation to see all of the available models</inlineHelpText>
        <label>Copado AI Model</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoAiHelper__OpenAI_Temperature__c</fullName>
        <defaultValue>0.7</defaultValue>
        <description>What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</description>
        <inlineHelpText>What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</inlineHelpText>
        <label>OpenAI Temperature</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Copado AI Companion Configuration</label>
    <pluralLabel>Copado AI Companion Configurations</pluralLabel>
</CustomObject>